# clang-tools

./: .clang-format  Makefile
FunctionInjector/: CMakeLists.txt  main.cpp
MyTransformer/: CMakeLists.txt  main.cpp
PointerTransformation/: examples.cpp
UnionConversionTransformer/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  find_idx.c  test.c
tests/conversion/: CMakeLists.txt  ex2.cpp  simple1.cpp
tests/conversion/in/: bad1.cpp  bad2.cpp  char_arr_simple1.cpp  char_arr_simple2.cpp  ex1.cpp  ex2.cpp  ex3.cpp  high_low.cpp  multiple_reads.cpp  simple1.cpp  simple2.cpp  simple3.cpp
tests/pointers/: ex1.cpp  ex2.cpp
